Fixed last spacing issue

--- a/mkdocs_moonstone/css/code-styles.css
+++ b/mkdocs_moonstone/css/code-styles.css
@@ -227,7 +227,7 @@ pre.codehilite, pre.highlight {
 
 .codehilitetable, .highlighttable {
   display: block;
-  margin: 1em 0;
+/*  margin: 1em 0;*/
   border-radius: 0.2em;
   font-size: 0.9rem;
   line-height: 1.4;
